--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     padding: 0;
 }
 
+@font-face {
+    font-family: 'library';
+    src: url('StoryScript-Regular.ttf');
+}
+
 .header{
     display: flex;
     flex-direction: row;
@@ -10,30 +15,41 @@
     align-items: center;
     height: 50px;
     padding: 20px;
+    padding-left: 100px;
+    padding-right: 100px;
     border: 0.5px solid black;
-    background: rgb(222, 222, 222);
     box-shadow: 0 6px 18px rgba(0, 0, 0, 0.16);
-    background-image: url('books.jpg');
     background-size: cover;
+}
+
+.new-book,
+.main{
+    display: flex;
+    flex-direction: column;
+}
+
+.main{
+    justify-content: center;
+    align-items: center;
 }
 
 .sign-in{
     border: 0.5px solid black;
     border-radius: 10px;
-    width: 80px;
-    height: 30px;
-    font-size: 16px;
+    width: 90px;
+    height: 35px;
+    background-color: rgb(220, 220, 220);
+    font-size: 18px;
     font-weight: bold;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: green;
+    font-family: 'library', system-ui, sans-serif;
     box-shadow: 0 6px 18px rgba(0, 0, 0, 0.24);
     cursor: pointer;
 }
 
 .library{
-    font-size: 24px;
+    font-size: 34px;
     font-weight: bold;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'library', system-ui, sans-serif;
 }
 
 .add-container{
@@ -50,10 +66,138 @@
     border-radius: 10px;
     width: 120px;
     height: 40px;
-    background-color: green;
+    background-color: rgb(220, 220, 220);
     font-size: 18px;
     font-weight: bold;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'library', system-ui, sans-serif;
     box-shadow: 0 6px 18px rgba(0, 0, 0, 0.24);
     cursor: pointer;
+}
+
+.overlay{
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: rgba(0,0,0,0.3);
+    backdrop-filter: blur(6px);
+    -webkit-backdrop-filter: blur(6px); /* Safari support */
+    display: none; /* hidden by default */
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
+
+.new-book{
+    justify-content: space-evenly;
+    align-items: center;
+    border-radius: 12px;
+    width: 290px;
+    height: 380px;
+    background-color: rgb(255, 247, 236);
+    font-size: 28px;
+    font-family: 'library', sans-serif;
+    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.36);
+}
+
+.inputs{
+    width: 240px;
+    height: 45px;
+    border: transparent;
+    border-radius: 10px;
+    background-color: white;
+    font-family: 'library', sans-serif;
+    font-size: 24px;
+}
+
+.inputs:hover{
+    background-color: rgb(240, 240, 240);
+    transition: 0.38s;
+}
+
+.inputs::placeholder{
+    font-size: 26px;
+    padding: 8px;
+}
+
+
+.checkbox-container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+
+#read {
+    transform: scale(1.5); /* 1.5 = 150% size */
+    cursor: pointer;
+}
+
+.submit-btn{
+    width: 140px;
+    height: 38px;
+    border: transparent;
+    border-radius: 16px;
+    background-color: rgb(0, 195, 130);
+    font-size: 28px;
+    font-family: 'library', sans-serif;
+    cursor: pointer;
+}
+
+.submit-btn:hover{
+    background-color: rgb(0, 170, 114);
+}
+
+
+.book-container{
+    display: none;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 290px;
+    height: 350px;
+    border-radius: 10px;
+    padding: 15px;
+    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.24);
+}
+
+.book-container:hover{
+    scale: 1.01;
+    transition: 0.2s;
+}
+
+.book-info{
+    font-size: 24px;
+    font-family: 'library', sans-serif;
+    text-align: center;
+    width: 100%;
+}
+
+#remove-btn{
+    width: 130px;
+    height: 35px;
+    background-color: red;
+    color: white;
+    border: transparent;
+    border-radius: 10px;
+    font-size: 24px;
+    font-family: 'library', sans-serif;
+    cursor: pointer;
+}
+
+#read-not-read{
+    width: 130px;
+    height: 35px;
+    background-color: red;
+    color: white;
+    border: transparent;
+    border-radius: 10px;
+    font-size: 24px;
+    font-family: 'library', sans-serif;
+    cursor: pointer;
+}
+
+.booklist{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 40px;
 }
